# gowhymo

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle.kts
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/: app.dart  initializer.dart
lib/constants/: app_constants.dart
lib/db/: focus_session.dart  kid.dart  lib.dart  plan.dart  study_english.dart  user.dart
lib/models/: focus_session.dart
lib/providers/: focus_session_providers.dart  home_providers.dart  lib.dart  settings_providers.dart
lib/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/services/: focus_reward_calculator.dart  llm_service.dart  openai_service.dart
lib/theme/: app_theme.dart
lib/ui/: lib.dart  register_screen.dart  setting_providers.dart  update_dialog.dart
lib/utils/: file_helper.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: mod.rs  simple.rs  user_identity.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_gowhymo.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_gowhymo.podspec
rust_builder/windows/: CMakeLists.txt
test/: db_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+22 files in other folders)
