[package]
name = "rust_lib_gowhymo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
blake3 = "1.8.2"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand = "0.9.2"
bs58 = "0.5.1"
sha2 = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.3"
# serde_json = "1.0"

# reqwest = { version = "0.12.24", features = ["rustls-tls", "json"] }

# sqlx = { version = "0.7.1", features = ["sqlite"] }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
